 * The following commands now return objects to the pipeline. Depending on your usage, you may need to pipe their output to `Out-Null`, assign their return values to `$null`, or do nothing.
     * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html)
     * [Install-Group](http://get-carbon.org/help/Install-Group.html)
     * [Install-Junction](http://get-carbon.org/help/Install-Junction.html)
     * [Install-User](http://get-carbon.org/help/Install-User.html)
     * [Grant-ComPermissions](http://get-carbon.org/help/Grant-ComPermissions.html)
     * [Install-IisApplication](http://get-carbon.org/help/Install-IisApplication.html)
 * [Install-Service](http://get-carbon.org/help/Grant-ComPermissions.html) now returns `ServiceController` objects instead of `sc.exe` output.
 * The following commands no longer return the stdout from various console applications. To see that output, use the `-Verbose` switch. Remove any usage of the output you were processing.
     * [Disable-FirewallStatefulFtp](http://get-carbon.org/help/Disable-FirewallStatefulFtp.html)
     * [Enable-FirewallStatefulFtp](http://get-carbon.org/help/Enable-FirewallStatefulFtp.html)
     * [Remove-SslCertificateBinding](http://get-carbon.org/help/Remove-SslCertificateBinding.html)
     * [Install-IisAppPool](http://get-carbon.org/help/Install-IisAppPool.html)
 * [Set-SslCertificateBinding](http://get-carbon.org/help/Set-SslCertificateBinding.html) now returns `Carbon.Certificates.SslCertificateBinding` objects instead of netsh output. Update any code that uses the old `Set-SslCertificateBinding` output.
 * Ensure that all thumbprints passed to [Set-SslCertificateBinding](http://get-carbon.org/help/Set-SslCertificateBinding.html) are valid (40 character hex strings).
 * Add the new `-PasswordNeverExpires` switch to usages of [Install-User](http://get-carbon.org/help/Install-User.html): it no longer sets the `PasswordNeverExpires` flag for a user by default.